@@ -9,6 +9,7 @@
 * Dev - Added lazyloading for the TO Slick sliders.
 * Dev - Added in a 'lsx_to_map_override' to allow 3rd party plugins to overrider the map before it generates.
 * Dev - Changing the single template width.
+* Dev - Added the possibility to call the form set on the options of each post type if the archive page requires it.
 
 ### 1.2.0 - 6 August 2019
 * Fix - Hiding the banner title on regions when the map is set to output there.
